log
Fri, Mar 21, 2025  9:09:34 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Fri, Mar 21, 2025 10:00:44 PM: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
exercises.c: In function 'crea_lista':
exercises.c:47:21: error: initialization of 'int *' from 'int' makes pointer from integer without a cast [-Werror=int-conversion]
   47 |       int* numero = k;
      |                     ^
exercises.c:48:17: error: 'l' undeclared (first use in this function)
   48 |       pushFront(l, numero);
      |                 ^
exercises.c:48:17: note: each undeclared identifier is reported only once for each function it appears in
cc1.exe: all warnings being treated as errors
Compilation failed
7049a07
Fri, Mar 21, 2025 10:01:31 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function 'crea_lista':
exercises.c:47:21: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   47 |       int* numero = (int*) k;
      |                     ^
cc1.exe: all warnings being treated as errors
Compilation failed
081a31d
Fri, Mar 21, 2025 10:01:55 PM: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function 'crea_lista':
exercises.c:47:20: error: passing argument 2 of 'pushFront' makes pointer from integer without a cast [-Werror=int-conversion]
   47 |       pushFront(L, k);
      |                    ^
      |                    |
      |                    int
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:17:31: note: expected 'void *' but argument is of type 'int'
   17 | void pushFront(List *L, void *dato);
      |                         ~~~~~~^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
f1f56d5
Fri, Mar 21, 2025 10:02:25 PM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'crea_lista':
exercises.c:47:22: error: initialization of 'void *' from 'int' makes pointer from integer without a cast [-Werror=int-conversion]
   47 |       void* numero = k;
      |                      ^
cc1.exe: all warnings being treated as errors
Compilation failed
49da212
Fri, Mar 21, 2025 10:02:46 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f049d1f
